[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/npcs/sage/sage_blink.png" type="Texture" id=1]
[ext_resource path="res://assets/forest_background/game_background_3. 2.png" type="Texture" id=2]
[ext_resource path="res://assets/npcs/sage/sage_not_blinking.png" type="Texture" id=3]
[ext_resource path="res://backend/NPCs/Sage.tscn" type="PackedScene" id=4]
[ext_resource path="res://frontend/NPCs/JohnScene.gd" type="Script" id=8]
[ext_resource path="res://assets/sfx/fire.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="SageScene" type="Control"]
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 514.374, 299.677 )
scale = Vector2( 0.532517, 0.554048 )
z_index = -3
texture = ExtResource( 2 )

[node name="FirePlacePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0
bus = "backgroundFx"

[node name="IntroductionPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SageSprite" type="AnimatedSprite" parent="."]
position = Vector2( 890.143, 461.071 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
frames = SubResource( 14 )
frame = 4
playing = true
flip_h = true

[node name="SceneLoaded" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sage" parent="." instance=ExtResource( 4 )]

[connection signal="finished" from="IntroductionPlayer" to="." method="_on_IntroductionPlayer_finished"]
[connection signal="timeout" from="SceneLoaded" to="." method="_on_SceneLoaded_timeout"]
